Fix alignment of global-close on mobile

--- a/src/common.css
+++ b/src/common.css
@@ -469,7 +469,7 @@ body.loading .page:target .page-footer > .loading-spinner {
     .global-close {
         position: absolute;
         right: 1rem;
-        top: 2.5rem;
+        top: 2rem;
         margin: 0;
     }
 
